test/end-to-end/compile-errors/spec-decl-recursion.crow
main void()
	()

a spec b

b spec a
